--- a/components/toxic-data-cleaner/Dockerfile
+++ b/components/toxic-data-cleaner/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.10.7-slim
 WORKDIR /pipelines/component/src
 ADD src/component.py ./
+ADD src/app.py ./
 ADD requirements.txt ./
 RUN pip install -r requirements.txt
