--- a/components/toxic-data-cleaner/Dockerfile
+++ b/components/toxic-data-cleaner/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /pipelines/component/src
 ADD src/component.py ./
 ADD src/app.py ./
 ADD requirements.txt ./
+EXPOSE 5000
 RUN pip install -r requirements.txt
