--- a/components/components_cloudbuild_git.json
+++ b/components/components_cloudbuild_git.json
@@ -19,7 +19,7 @@
       "entrypoint": "bash",
       "args": [
         "-c",
-        "chmod 600 /root/.ssh/id_github && cat <<EOF >/root/.ssh/config\nHostname github.com\nIdentityFile /root/.ssh/id_github\nEOF && ssh-keyscan -t rsa github.com > /root/.ssh/known_hosts"
+        "chmod 600 /root/.ssh/id_github && echo -e \"Hostname github.com\\nIdentityFile /root/.ssh/id_github\" > /root/.ssh/config && ssh-keyscan -t rsa github.com > /root/.ssh/known_hosts"
       ],
       "volumes": [
         {
@@ -33,7 +33,7 @@
       "entrypoint": "bash",
       "args": [
         "-c",
-        "echo \"Cloning repo ...\" && git clone --depth 1 git@github.com:RomanNekrasov/DataEngineering.git && echo \"data uploaded\" >> components/history.txt && echo \"Pushing changes to git repo ...\" && git config --global user.name RomanNekrasov && git config --global user.email romanvanriessen@gmail.com && git add -A && git commit -m \"data uploaded\" && git push origin master"
+        "git clone --depth 1 git@github.com:RomanNekrasov/DataEngineering.git && cd DataEngineering && echo \"data uploaded\" >> ct_pipeline/history.txt && git config user.name RomanNekrasov && git config user.email romanvanriessen@gmail.com && git add -A && git commit -m \"data uploaded\" && git push origin master"
       ],
       "volumes": [
         {
