--- a/components/toxic-predictor/Dockerfile
+++ b/components/toxic-predictor/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.10.7-slim
 WORKDIR /pipelines/component/src
 ADD src/component.py ./
+ADD src/app.py ./
 ADD requirements.txt ./
 ENV MODEL_REPO=models_de2023_group1
-
+ENV PROJECT_ID=assignment1-402316
 RUN pip install -r requirements.txt
