--- a/components/toxic-predictor/Dockerfile
+++ b/components/toxic-predictor/Dockerfile
@@ -6,3 +6,4 @@ ADD requirements.txt ./
 ENV MODEL_REPO=models_de2023_group1
 ENV PROJECT_ID=assignment1-402316
 RUN pip install -r requirements.txt
+CMD ["python3", "/pipelines/component/src/app.py"]
