--- a/components/toxic-prediction-ui/Dockerfile
+++ b/components/toxic-prediction-ui/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:3.10.7-slim
-ENTRYPOINT python3
 WORKDIR /pipelines/component/src
 ADD src/ ./
 ADD requirements.txt ./
 EXPOSE 5002
 RUN pip install -r requirements.txt
-CMD ["src/app.py"]
+CMD ["python3","src/app.py"]
