Made minor adjustment to clouddeploy script for the runcommands of the first image

--- a/components/components_clouddeploy.json
+++ b/components/components_clouddeploy.json
@@ -19,7 +19,9 @@
         "2",
         "--memory",
         "4G",
-        "--allow-unauthenticated"
+        "--allow-unauthenticated",
+        "--args",
+        ["python3", "app.py"]
       ],
       "id": "toxic-data-cleaner-api-deploy"
     },
