--- a/components/components_clouddeploy.json
+++ b/components/components_clouddeploy.json
@@ -20,8 +20,7 @@
         "--memory",
         "4G",
         "--allow-unauthenticated",
-        "--args",
-        ["python3", "app.py"]
+        "--args=python3,app.py"
       ],
       "id": "toxic-data-cleaner-api-deploy"
     },
